--- a/generator/templates/views/admin.phtml
+++ b/generator/templates/views/admin.phtml
@@ -4,8 +4,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<?= '<script src="' . AgilePHP::getFramework()->getDocumentRoot() . '"/AgilePHP/AgilePHP.js"></script>' ?>
-		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '"/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
+		<?= '<script src="' . AgilePHP::getFramework()->getDocumentRoot() . '/AgilePHP/AgilePHP.js"></script>' ?>
+		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
 	</head>
 
 	<body>
@@ -14,7 +14,7 @@
 		<?php require_once 'admin_navigation.phtml'; ?>
 
 		<?php
-			  if( !$content )
+			  if( !isset( $content ) )
 			  	  echo 'Welcome to the admin area!';
 			  else
 			  	  echo $content
