--- a/generator/templates/views/error.phtml
+++ b/generator/templates/views/error.phtml
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '"/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
+		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
 	</head>
 
 	<body>
