--- a/test/view/admin.phtml
+++ b/test/view/admin.phtml
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?php echo $title; ?></title>
-		<script src="/AgilePHP/src/AgilePHP.js"></script>
+		<script src="<?php echo AgilePHP::getFramework()->getDocumentRoot(); ?>/../src/AgilePHP.js"></script>
 		<link href="<?php echo AgilePHP::getFramework()->getDocumentRoot(); ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
