--- a/generator/templates/views/admin_navigation.phtml
+++ b/generator/templates/views/admin_navigation.phtml
@@ -15,5 +15,6 @@
 		<td style="padding-left: 10px;">
 			<a href="<?php echo AgilePHP::getFramework()->getRequestBase() ?>/LoginController/logout">Logout</a>
 		</td>
+		<!-- #@AgilePHPGen -->
 	</tr>
 </table>
