see changelog for details - v0.12a
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@30 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/generator/templates/views/admin.phtml
+++ b/generator/templates/views/admin.phtml
@@ -4,22 +4,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<?= '<script src="' . AgilePHP::getFramework()->getDocumentRoot() . '/AgilePHP/AgilePHP.js"></script>' ?>
-		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
+		<script src="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/AgilePHP/AgilePHP.js"></script>
+		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
-
 		<?php require_once 'admin_navigation.phtml'; ?>
-
-		<?php
-			  if( !isset( $content ) )
-			  	  echo 'Welcome to the admin area!';
-			  else
-			  	  echo $content
-		 ?>
-
+		<?php echo isset( $content ) ? $content : 'Welcome to the admin area!'; ?>
 		<?php require_once 'footer.html'; ?>
 	</body>
 </html>
