--- a/generator/templates/views/login.phtml
+++ b/generator/templates/views/login.phtml
@@ -4,13 +4,13 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
+		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
 
-		<?= '<form method="post" action="' . AgilePHP::getFramework()->getRequestBase() . '/LoginController/login">' ?>
+		<form method="post" action="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/login">
 
 			<table border="0">
 				<tr>
@@ -34,12 +34,12 @@
 					<td>
 						<input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="<?= $request_token ?>"/>
 						<input type="submit" value="Login"/>
-						<?= '<a href="' . AgilePHP::getFramework()->getRequestBase() . '/LoginController/oops">Forgot Password</a>' ?>
+						<a href="<?= AgilePHP::getFramework()->getRequestBase() ?>/LoginController/oops">Forgot Password</a>
 					</td>					
 				</tr>
 			</table>
 
-		<?= '</form>' ?>
+		</form>
 
 		<?php require_once 'footer.html'; ?>
 	</body>
