--- a/generator/templates/views/error.phtml
+++ b/generator/templates/views/error.phtml
@@ -4,14 +4,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8"/>
 		<title><?= $title; ?></title>
-		<?= '<link href="' . AgilePHP::getFramework()->getDocumentRoot() . '/view/css/style.css" type="text/css" rel="stylesheet"/>' ?>
+		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
-
-		<?= '<span class="error">' . $error . '</span>'; ?>
-
+		<div class="error"><?php if( isset( $error ) ) echo $error; ?></div>
 		<?php require_once 'footer.html'; ?>
 	</body>
 </html>
