--- a/test/view/header.html
+++ b/test/view/header.html
@@ -1,1 +1,8 @@
 <div style="font-size: 20px; padding-bottom: 25px;">AgilePHP Framework</div>
+
+<div style="padding-top: 10px;">
+	<a href="/test/index.php">Home</a> |
+	<a href="/test/index.php/IndexController/about">About</a> |
+	<a href="/test/index.php/IndexController/services">Services</a> |
+	<a href="/test/index.php/IndexController/contact">Contact</a>
+</div>
