--- a/test/view/about.phtml
+++ b/test/view/about.phtml
@@ -3,12 +3,15 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title><?php echo $title; ?></title>
+		<title><?= $title ?></title>
 		<link href="<?= AgilePHP::getFramework()->getDocumentRoot() ?>/view/css/style.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
 		<?php require_once 'header.html'; ?>
-		<?= isset( $error ) ? '<div class="error" style="font-size: 13px;">Error: ' . $error . '</div>' : ''; ?>
+
+		<div>This is the about page</div>
+
+		<?php require_once 'footer.html'; ?>
 	</body>
 </html>
