added register link
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@45 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/generator/templates/views/login.phtml
+++ b/generator/templates/views/login.phtml
@@ -39,6 +39,8 @@
 				</tr>
 			</table>
 
+			<div style="padding-top: 25px;" >Not a member? <a href="/index.php/LoginController/showRegister">Register</a> now!</div>
+
 		</form>
 
 		<?php require_once 'footer.html'; ?>
