--- a/generator/templates/views/admin_navigation.phtml
+++ b/generator/templates/views/admin_navigation.phtml
@@ -4,13 +4,13 @@
 			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/IndexController/admin">Home</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/UserController/modelList">Users</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/UserController">Users</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/RoleController/modelList">Roles</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/RoleController">Roles</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/SessionController/modelList">Sessions</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/SessionController">Sessions</a>
 		</td>
 		<td style="padding-left: 10px;">
 			<a href="<?php echo AgilePHP::getFramework()->getRequestBase() ?>/LoginController/logout">Logout</a>
