--- a/test/view/admin_navigation.phtml
+++ b/test/view/admin_navigation.phtml
@@ -9,13 +9,13 @@
 		</td>
 		-->
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/UserController/modelList">Users</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/UserController">Users</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/RoleController/modelList">Roles</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/RoleController">Roles</a>
 		</td>
 		<td style="padding-left: 10px;">
-			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/SessionController/modelList">Sessions</a>
+			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/SessionController">Sessions</a>
 		</td>
 		<td style="padding-left: 10px;">
 			<a href="<?php echo AgilePHP::getFramework()->getRequestBase(); ?>/InventoryController">Inventory</a>
