- Reorg soap classes under webservice.soap. - Reorg remoting classes under webservice.remoting - Renamed all exception classes (got rid of AgilePHP_) and organized them into their respective packages. - Removing build directory from repo and adding svn:ignore property.
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@100 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/studio/view/editor-code.phtml
+++ b/studio/view/editor-code.phtml
@@ -42,7 +42,7 @@
 		  					 return false;
 		  				 }
 
-		  				 if( response._class == 'AgilePHP_RemotingException' ) {
+		  				 if( response._class == 'RemotingException' ) {
 
 			  				 alert( response.message );
 			  				 return false;
