- Added WebSocket transport support to AgilePHP.Remoting - Minor tweaks to Studio
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@121 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/studio/view/css/style.css
+++ b/studio/view/css/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .extBlue {
-	
+
 	background-color: #deecfd;
 }
 
@@ -169,7 +169,7 @@ button.helpDocumentation {
 /** Wizard Styles */
 .wizard-gradient-x {
 
-	background: #C0C0C0;
+	background: #F9F9F9;
 }
 
 .wizard-label {
