- Bug fix to Studio editor-code.phtml view in regards to RemotingException handling - Cleanup on studio templates - Bug fix to Log class. level was being read before it was set by getLogger - Cleanup to AgilePHP.js remoting object around new WebSocket transport - Cleaned up generated CSS file by studio. Removed line-height references. - Added support to #@BasicAuthenticator::authenticator to allow specifying static authenticator
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@122 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/studio/view/editor-code.phtml
+++ b/studio/view/editor-code.phtml
@@ -38,17 +38,17 @@
 
 		  				 if( !response || !response.success ) {
 
-		  					 alert( 'Error saving document' );
+		  					 window.parent.AgilePHP.Studio.error( response.errors.reason );
 		  					 return false;
 		  				 }
 
-		  				 if( response._class == 'RemotingException' ) {
+		  				 if( response.RemotingException ) {
 
-			  				 alert( response.message );
+		  					 window.parent.AgilePHP.Studio.error( response.RemotingException.message );
 			  				 return false;
 		  				 }
 
-		  				 alert( 'Document saved' );
+		  				window.parent.AgilePHP.Studio.info( 'Document saved' );
 		  			});
 	      		}
 	      });
